--- a/.github/workflows/add-secrets.yml
+++ b/.github/workflows/add-secrets.yml
@@ -4,23 +4,51 @@ on:
   workflow_dispatch:
     inputs:
       vercel_token:
-        description: 'VERCEL Token'
+        description: "Paste your Vercel token (will be written as VERCEL_TOKEN in each SaaS repo)"
         required: true
 
 jobs:
   add-secrets:
     runs-on: ubuntu-latest
-    steps:
-      - name: Set up GitHub CLI
-        run: |
-          sudo apt-get install gh
 
-      - name: Add Secrets
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERCEL_TOKEN: ${{ github.event.inputs.vercel_token }}
+    # Classic token with `repo` scope that you saved as a secret in the hub repo
+    env:
+      GH_TOKEN: ${{ secrets.GH_PAT }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        repo:
+          - SaaS-01
+          - SaaS-02
+          - SaaS-03
+          - SaaS-04
+          - SaaS-05
+          - SaaS-06
+          - SaaS-07
+          - SaaS-08
+          - SaaS-09
+          - SaaS-10
+          - SaaS-11
+          - SaaS-12
+          - SaaS-13
+          - SaaS-14
+          - SaaS-15
+          - SaaS-16
+          - SaaS-17
+          - SaaS-18
+          - SaaS-19
+          - SaaS-20
+
+    steps:
+      - name: Authenticate gh with GH_TOKEN
         run: |
-          for i in $(seq -f "SaaS-%02g" 1 20); do
-            echo "Adding secrets to $i"
-            gh repo edit "$i" --add-secret VERCEL_TOKEN "$VERCEL_TOKEN"
-          done
+          echo "$GH_TOKEN" | gh auth login --with-token
+          gh auth status
+
+      - name: Add VERCEL_TOKEN to ${{ matrix.repo }}
+        run: |
+          echo "${{ github.event.inputs.vercel_token }}" \
+          | gh secret set VERCEL_TOKEN \
+              --repo Jvryan92/${{ matrix.repo }} \
+              --app actions
